# LexiBar-v2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
qml/: main.qml
ressources/: qml.qrc
src/: gestionlexibar.cpp  gestionlexibar.h  main.cpp
